media/ffmpeg: skips libswr, and interleaves samples for planar audio.

* workaround for #12720.